feat: derive rest boilerplate (#76)
* chore: deine base handlers
* feat: resource names
* feat: catalog handler
* feat: credentials handler
* feat: generate rest handlers via proc macros
* feat: migrate sharing handlers
* fix: integration tests
